# PCF85063A_Driver

./: .gitignore  CMakeLists.txt  Doxyfile  PCF85063A.code-workspace  README.MD  prj.conf
boards/: nrf52dk_nrf52832.overlay
doc/html/: _p_c_f85063_a_8c.html  _p_c_f85063_a_8c_source.html  _p_c_f85063_a_8h.html  _p_c_f85063_a_8h_source.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  main_8c.html  main_8c_source.html  menudata.js  test__pcf85063a_8c.html  test__pcf85063a_8c_source.html
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  defines_2.js  defines_4.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_b.js  enums_0.js  enumvalues_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  (+4 more)
doc/latex/: refman.tex
src/: PCF85063A.c  PCF85063A.h  main.c
tests/: test_pcf85063a.c
